# Financial-Agentic-AI-system

./: main.py  pyproject.toml  workflow.py
src/: logger.py  models.py  tools.py  workflow.py
src/agents/: analysis_agent.py  data_collection_agent.py
