[project]
name = "financial-agentic-ai-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.0.1",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "yfinance>=0.2.66",
]
