[project]
name = "financial-agentic-ai-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "yfinance>=0.2.66",
    "tavily>=1.1.0",
    "tavily-python>=0.7.12",
]
